--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -12,22 +12,21 @@
         <h1>Forgot Password</h1>
         <h4><span class="span">Please input your email address to proceed with resetting your password.</span></h4>
         <br>
-        <label class="text-position">Email Address</label>
-        <input type="email" name="textbox" value="{{ forgot_email_text }}">
-        <br>
+        <div class="form-container">
+            <div class="form-middle">
+                <label class="text-position">Email Address</label>
+                <input type="email" name="textbox" value="{{ forgot_email_text }}">
+                <br>
 
-        <div class="button-frame">
-            <a href="{{ url_for('reset_password_page') }}">
-                <button type="button" name="login">Reset Password</button>
-            </a>
-            <br><br>
-            <a href="{{ url_for('login') }}">Back</a>
+                <div class="button-frame">
+                    <a href="{{ url_for('reset_password_page') }}">
+                        <button type="button" name="login">Reset Password</button>
+                    </a>
+                    <br><br>
+                    <a href="{{ url_for('login') }}">Back</a>
+                </div>
+            </div>
         </div>
-
-
     </form>
-
-   
-
 </body>
 </html>
