--- a/templates/resetPassword_page.html
+++ b/templates/resetPassword_page.html
@@ -14,19 +14,21 @@
             Password length must be between 8-20 <br>
             Password must include special character <br></span>
         </h4>
+        <div class="form-container">
+            <div class="form-middle">
+                <label class="text-position">Passowrd</label>
+                <input type="password" name="password1" value="{{ password_text_1 }}"><br><br>
 
-        <label class="text-position">Passowrd</label>
-        <input type="password" name="password1" value="{{ password_text_1 }}"><br>
+                <label class="text-position">Confirm Password</label>
+                <input type="password" name="password2" value="{{ password_text_2 }}">
 
-        <label class="text-position">Confirm Password</label>
-        <input type="password" name="password2" placeholder="Confirm your Password" value="{{ password_text_2 }}">
-
-        <div class="button-frame">
-            <a href="{{ url_for('login') }}">
-                <button type="button" name="login">Confirm</button>
-            </a>
+                <div class="button-frame">
+                    <a href="{{ url_for('login') }}">
+                        <button type="button" name="login">Confirm</button>
+                    </a>
+                </div>
+            </div>
         </div>
-
     </form>
 </body>
 </html>
