--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -15,13 +15,11 @@
         <div class="form-container">
             <div class="form-middle">
                 <label class="text-position">Email Address</label>
-                <input type="email" name="textbox" value="{{ forgot_email_text }}">
+                <input type="email" name="email" value="{{ forgot_email_text }}">
                 <br>
 
                 <div class="button-frame">
-                    <a href="{{ url_for('reset_password_page') }}">
-                        <button type="button" name="login">Reset Password</button>
-                    </a>
+                    <button type="button" name="forgot">Reset Password</button>
                     <br><br>
                     <a href="{{ url_for('login') }}">Back</a>
                 </div>
