--- a/templates/resetPassword_page.html
+++ b/templates/resetPassword_page.html
@@ -12,8 +12,8 @@
         <h1>Reset Your Password</h1>
         <h4> <span class="span">Make sure both of them are similar <br>
             Password length must be between 8-20 <br>
-            Password must include special character <br></span>
-        </h4>
+            Password must include special character</span>
+        </h4><br>
         <div class="form-container">
             <div class="form-middle">
                 <label class="text-position">Passowrd</label>
@@ -23,9 +23,7 @@
                 <input type="password" name="password2" value="{{ password_text_2 }}">
 
                 <div class="button-frame">
-                    <a href="{{ url_for('login') }}">
-                        <button type="button" name="login">Confirm</button>
-                    </a>
+                    <button type="button" name="login">Confirm</button>
                 </div>
             </div>
         </div>
