--- a/templates/resetPassword_page.html
+++ b/templates/resetPassword_page.html
@@ -23,7 +23,7 @@
                 <input type="password" name="password2" value="{{ password_text_2 }}">
 
                 <div class="button-frame">
-                    <button type="button" name="login">Confirm</button>
+                    <button type="submit" name="login">Confirm</button>
                 </div>
             </div>
         </div>
