--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -19,7 +19,7 @@
                 <br>
 
                 <div class="button-frame">
-                    <button type="button" name="forgot">Reset Password</button>
+                    <button type="submit" name="forgot">Reset Password</button>
                     <br><br>
                     <a href="{{ url_for('login') }}">Back</a>
                 </div>
