--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -77,6 +77,14 @@ button {
     margin-bottom: 5px;
 }
 
+/* Alert frame*/
+.alert {
+    color: white;
+    background-color: red;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 15px;
+}
 
 
 
