--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -83,8 +83,9 @@ button {
     background-color: red;
     padding: 10px;
     border-radius: 5px;
-    margin-bottom: 15px;
+    margin-top: 15px;
 }
+
 
 
 
