--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -15,8 +15,8 @@
 
         <div class="form-container">
             <div class="form-middle">
-                <label class="text-position">Username</label>
-                <input type="text" name="textbox" value="{{ login_text }}"><br><br>
+                <label class="text-position">Email Address</label>
+                <input type="email" name="textbox" value="{{ login_text }}"><br><br>
         
                 <label class="text-position">Password</label>
                 <input type="password" name="password" value="{{ password_text }}">
