--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -52,7 +52,7 @@
         <div class="button-frame">
             <button type="submit" name="register">Submit</button>
             <br><br>
-            <a href="{{ url_for('login') }}">Back to Login</a>
+            <a href="{{ url_for('login_page') }}">Back to Login</a>
         </div>
 
     </form>
