--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -21,7 +21,7 @@
                 <div class="button-frame">
                     <button type="submit" name="forgot">Reset Password</button>
                     <br><br>
-                    <a href="{{ url_for('login') }}">Back</a>
+                    <a href="{{ url_for('login_page') }}">Back</a>
                 </div>
             </div>
         </div>
