--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>ForgotPassword_page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='static_css/main_page.css') }}">
 </head>
 
@@ -17,6 +19,12 @@
                 <label class="text-position">Email Address</label>
                 <input type="email" name="email" value="{{ forgot_email_text }}">
                 <br>
+
+                {% if error_message and request.method == 'POST' %}
+                <div class="alert">
+                    <strong>Error:</strong> {{ error_message }}
+                </div>
+                {% endif %}
 
                 <div class="button-frame">
                     <button type="submit" name="forgot">Reset Password</button>
