--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Register_Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='static_css/main_page.css') }}">
 </head>
+
 
 <body>
     <form method="POST">
@@ -48,6 +51,12 @@
                 <input type="password" name="password2" value="{{ password2_text }}">
             </div>
         </div>
+
+        {% if error_message and request.method == 'POST' %}
+        <div class="alert">
+            <strong>Error:</strong> {{ error_message }}
+        </div>
+        {% endif %}
 
         <div class="button-frame">
             <button type="submit" name="register">Submit</button>
