--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -23,7 +23,7 @@
                 <input type="text" name="userid" value="{{ userid_text }}"><br>
 
                 <label class="text-position">Email Address</label>
-                <input type="text" name="email" value="{{ email_text }}" pattern="[a-zA-Z0-9._%+-]+@newinti\.edu\.my$"><br>
+                <input type="text" name="email" value="{{ email_text }}"><br>
 
                 <label class="text-position">Department</label>
                 <select name="department" value="{{ department_text }}">
@@ -42,7 +42,7 @@
     
             <div class="form-right">
                 <label class="text-position">Contact Number</label>
-                <input type="tel" name="contact" value="{{ contact_text }}" pattern="^01\d{8,9}$"><br>  
+                <input type="tel" name="contact" value="{{ contact_text }}"><br>  
 
                 <label class="text-position">Password</label>
                 <input type="password" name="password1" value="{{ password1_text }}"><br>
