--- a/app/templates/login_page.html
+++ b/app/templates/login_page.html
@@ -9,6 +9,15 @@
 
 <body>
     <form method="POST">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        {% for category, message in messages %}
+            <div class="alert alert-{{ category }}">
+            {{ message }}
+            </div>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
         <div class="heading"></div>
         <br>
         <h1>Login Here</h1><br>
