--- a/app/templates/login_page.html
+++ b/app/templates/login_page.html
@@ -30,15 +30,15 @@
                 <div>
                     <label class="text-position">Password</label>
                     <input type="password" name="password" value="{{ password_text }}">
-                    <button class="toggle-password-btn">
-                        <i class="fa fa-eye"></i> <!-- Initial eye icon -->
+                    <button type="button"class="toggle-password-eye">
+                        <i class="fas fa-eye"></i>
                     </button>
                 </div>
             
                 <!-- Link to the external JS file -->
                 <script src="togglePassword.js"></script>
 
-                
+
                 {% if error_message and request.method == 'POST' %}
                 <div class="alert">
                     <strong>Error:</strong> {{ error_message }}
