--- a/app/static/static_css/main_page.css
+++ b/app/static/static_css/main_page.css
@@ -86,6 +86,15 @@ button {
     margin-top: 15px;
 }
 
+.toggle-password-eye {
+    position: absolute;
+    right: 5px;
+    top: 20%;
+    border: none;
+    background: none;
+    cursor: pointer;
+    font-size: 15px;
+}
 
 
 
