--- a/app/templates/login_page.html
+++ b/app/templates/login_page.html
@@ -30,7 +30,7 @@
                 <div>
                     <label class="text-position">Password</label>
                     <input type="password" name="password" value="{{ password_text }}">
-                    <button class="toggle-password-btn">
+                    <button type="button" class="toggle-password-btn" style="position: absolute; right: 5px; top: 20%; border: none; background: none; cursor: pointer; font-size: 15px;">
                         <i class="fa fa-eye"></i> <!-- Initial eye icon -->
                     </button>
                 </div>
