--- a/app/static/static_css/main_page.css
+++ b/app/static/static_css/main_page.css
@@ -86,15 +86,23 @@ button {
     margin-top: 15px;
 }
 
-.toggle-password-eye {
+.password-container {
+    position: relative;
+    display: inline-block;
+    width: 100%; /* Ensure it takes full width */
+}
+
+.toggle-password-btn {
     position: absolute;
     right: 5px;
-    top: 20%;
+    top: 30%;
+    transform: translateY(-50%);
     border: none;
     background: none;
     cursor: pointer;
-    font-size: 15px;
+    font-size: 14px;
+    width: 20px;
+    height: 20px;
+    padding: 0;
+    color: #555;
 }
-
-
-
