--- a/app/templates/login_page.html
+++ b/app/templates/login_page.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <title>Login_Page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='static_css/main_page.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
+
 
 <body>
     <form method="POST">
@@ -27,43 +29,16 @@
                 <label class="text-position">Email Address</label>
                 <input type="email" name="textbox" value="{{ login_text }}"><br><br>
         
-                
-                <label class="text-position">Password</label>
-                <input type="password" name="password" value="{{ password_text }}">
-                <button type="button" class="toggle-password-btn" style="position: absolute; right: 5px; top: 20%; border: none; background: none; cursor: pointer; font-size: 15px;">
-                    <i class="fa fa-eye"></i> <!-- Initial eye icon -->
-                </button>
-                
-            
-                  <!-- Include your JavaScript -->
-                <script>
-                    /* Toggle password function*/ 
-                    function togglePasswordVisibility() {
-                        const toggleButtons = document.querySelectorAll('.toggle-password-btn');
-
-                        toggleButtons.forEach(button => {
-                            button.addEventListener('click', function () {
-                                const input = this.parentElement.querySelector('input');
-                                const icon = this.querySelector('i');
-
-                                if (input.getAttribute('type') === 'password') {
-                                    input.setAttribute('type', 'text');
-                                    icon.classList.remove('fa-eye');
-                                    icon.classList.add('fa-eye-slash');
-                                } else {
-                                    input.setAttribute('type', 'password');
-                                    icon.classList.remove('fa-eye-slash');
-                                    icon.classList.add('fa-eye');
-                                }
-                            });
-                        });
-                    }
-
-                    window.onload = function() {
-                        togglePasswordVisibility();
-                    };
-                </script>
-
+                <div class="password-container">
+                    <label class="text-position">Password</label>
+                    <input type="password" name="password" value="{{ password_text }}">
+                    <button type="button" class="toggle-password-btn">
+                        <i class="fas fa-eye"></i>
+                    </button>
+                </div>
+                        
+                <!-- Include your JavaScript -->
+                <script src="{{ url_for('static', filename='js/toggle-password.js') }}"></script>
 
                 {% if error_message and request.method == 'POST' %}
                 <div class="alert">
