--- a/app/templates/resetPassword_page.html
+++ b/app/templates/resetPassword_page.html
@@ -19,11 +19,25 @@
         </h4><br>
         <div class="form-container">
             <div class="form-middle">
-                <label class="text-position">Passowrd</label>
-                <input type="password" name="password1" value="{{ password_text_1 }}"><br><br>
+            
+                <div class="password-container">
+                    <label class="text-position">Password</label>
+                    <input type="password" name="password" value="{{ password_text_1 }}">
+                    <button type="button" class="toggle-password-btn">
+                        <i class="fas fa-eye"></i>
+                    </button>
+                </div>
 
-                <label class="text-position">Confirm Password</label>
-                <input type="password" name="password2" value="{{ password_text_2 }}">
+                <div class="password-container">
+                    <label class="text-position"> Confirm Password</label>
+                    <input type="password" name="password" value="{{ password_text_2 }}">
+                    <button type="button" class="toggle-password-btn">
+                        <i class="fas fa-eye"></i>
+                    </button>
+                </div>
+            
+                <!-- Include your JavaScript -->
+                <script src="{{ url_for('static', filename='js/toggle-password.js') }}"></script>
 
                 {% if error_message and request.method == 'POST' %}
                 <div class="alert">
