--- a/app/templates/register_page.html
+++ b/app/templates/register_page.html
@@ -4,7 +4,7 @@
     <title>Register_Page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='static_css/main_page.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main_page.css') }}">
 </head>
 
 
