--- a/app/templates/register_page.html
+++ b/app/templates/register_page.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main_page.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
 
@@ -60,7 +61,7 @@
                     </button>
                 </div>
                 <!-- Include your JavaScript -->
-                <script src="{{ url_for('static', filename='js/toggle-password.js') }}"></script>
+                <script src="{{ url_for('static', filename='js/toggle_password.js') }}"></script>
             </div>
         </div>
 
