--- a/app/templates/resetPassword_page.html
+++ b/app/templates/resetPassword_page.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main_page.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
 
@@ -38,7 +39,7 @@
                 </div>
             
                 <!-- Include your JavaScript -->
-                <script src="{{ url_for('static', filename='js/toggle-password.js') }}"></script>
+                <script src="{{ url_for('static', filename='js/toggle_password.js') }}"></script>
 
                 {% if error_message and request.method == 'POST' %}
                 <div class="alert">
