--- a/app/templates/resetPassword_page.html
+++ b/app/templates/resetPassword_page.html
@@ -28,7 +28,7 @@
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
                     </button>
-                </div><br>
+                </div><br><br>
 
                 <div class="password-container">
                     <label class="text-position"> Confirm Password</label>
