--- a/app/templates/resetPassword_page.html
+++ b/app/templates/resetPassword_page.html
@@ -24,7 +24,7 @@
             
                 <div class="password-container">
                     <label class="text-position">Password</label>
-                    <input type="password" name="password" value="{{ password_text_1 }}">
+                    <input type="password" name="password1" value="{{ password_text_1 }}">
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
                     </button>
@@ -32,7 +32,7 @@
 
                 <div class="password-container">
                     <label class="text-position"> Confirm Password</label>
-                    <input type="password" name="password" value="{{ password_text_2 }}">
+                    <input type="password" name="password2" value="{{ password_text_2 }}">
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
                     </button>
