--- a/app/static/css/main_page.css
+++ b/app/static/css/main_page.css
@@ -49,7 +49,6 @@ select {
     margin: 1% 0;
     box-sizing: border-box;  /* Ensure padding and border are included in the total width */
     display: inline-block;  /* Align with the other form elements */
-    position: relative;
 }
 
 /* Button format*/
@@ -86,7 +85,7 @@ button {
     margin-top: 15px;
 }
 
-.input-container {
+.password-container {
     position: relative;
     display: inline-block;
     width: 25vh; /* Ensure it takes full width */
