--- a/app/static/css/main_page.css
+++ b/app/static/css/main_page.css
@@ -86,7 +86,7 @@ button {
     margin-top: 15px;
 }
 
-.password-container {
+.input-container {
     position: relative;
     display: inline-block;
     width: 25vh; /* Ensure it takes full width */
