--- a/app/templates/login_page.html
+++ b/app/templates/login_page.html
@@ -27,10 +27,10 @@
         
         <div class="form-container">
             <div class="form-middle">
-                <label class="text-position">Email Address</label>
-                <input type="email" name="textbox" value="{{ login_text }}"><br><br>
-        
-                <div class="password-container">
+                <div class="input-container">
+                    <label class="text-position">Email Address</label>
+                    <input type="email" name="textbox" value="{{ login_text }}"><br><br>
+
                     <label class="text-position">Password</label>
                     <input type="password" name="password" value="{{ password_text }}">
                     <button type="button" class="toggle-password-btn">
