--- a/app/templates/login_page.html
+++ b/app/templates/login_page.html
@@ -27,10 +27,10 @@
         
         <div class="form-container">
             <div class="form-middle">
-                <div class="input-container">
-                    <label class="text-position">Email Address</label>
-                    <input type="email" name="textbox" value="{{ login_text }}"><br><br>
-
+                <label class="text-position">Email Address</label>
+                <input type="email" name="textbox" value="{{ login_text }}"><br><br>
+        
+                <div class="password-container">
                     <label class="text-position">Password</label>
                     <input type="password" name="password" value="{{ password_text }}">
                     <button type="button" class="toggle-password-btn">
@@ -38,11 +38,14 @@
                     </button>
                 </div>
                 
-                {% if error_message and request.method == 'POST' %}
-                <div class="alert">
-                    <strong>Error:</strong> {{ error_message }}
+                <div>
+                    {% if error_message and request.method == 'POST' %}
+                    <div class="alert">
+                        <strong>Error:</strong> {{ error_message }}
+                    </div>
+                    {% endif %}
                 </div>
-                {% endif %}
+                
                     
                 <!-- Include your JavaScript -->
                 <script src="{{ url_for('static', filename='js/toggle_password.js') }}"></script>
