--- a/app/static/css/main_page.css
+++ b/app/static/css/main_page.css
@@ -22,6 +22,7 @@ form {
     text-align: center;
     display: center flex;
     justify-content: center;
+    position: relative;
     width: 55vh;
     padding: 50px;
     border: 2px solid #ccc;
