--- a/app/static/css/main_page.css
+++ b/app/static/css/main_page.css
@@ -20,9 +20,10 @@ body {
 /* Frame form */
 form {
     text-align: center;
-    display: center flex;
+    /*display: center flex;*/
     justify-content: center;
     position: relative;
+    display: inline-block;
     width: 55vh;
     padding: 50px;
     border: 2px solid #ccc;
