--- a/app/static/css/main_page.css
+++ b/app/static/css/main_page.css
@@ -20,10 +20,9 @@ body {
 /* Frame form */
 form {
     text-align: center;
-    /*display: center flex;*/
     justify-content: center;
     position: relative;
-    display: inline-block;
+    display: center;
     width: 55vh;
     padding: 50px;
     border: 2px solid #ccc;
@@ -33,10 +32,10 @@ form {
 }
 
 /* Frame for register page*/
-.form-container {
-    /*display: flex;
-    justify-content: center;*/
-}
+/*.form-container {
+    display: flex;
+    justify-content: center;
+}*/
 
 /* Frame for register page to perform left and right*/
 .form-left, .form-right {
@@ -89,7 +88,7 @@ button {
     margin-top: 15px;
 }
 
-.password-container {
+.password-container, .input-container {
     position: relative;
     display: inline-block;
     width: 25vh; /* Ensure it takes full width */
