--- a/app/templates/forgotPassword_page.html
+++ b/app/templates/forgotPassword_page.html
@@ -16,8 +16,10 @@
         <br>
         <div class="form-container">
             <div class="form-middle">
-                <label class="text-position">Email Address</label>
-                <input type="email" name="email" value="{{ forgot_email_text }}">
+                <div class="input-container">
+                    <label class="text-position">Email Address</label>
+                    <input type="email" name="email" value="{{ forgot_email_text }}">
+                </div>
                 <br>
 
                 {% if error_message and request.method == 'POST' %}
