--- a/app/static/css/main_page.css
+++ b/app/static/css/main_page.css
@@ -30,10 +30,10 @@ form {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
+/* Frame for register page*/
 .form-container {
     display: flex;
-    flex-direction: column;
-    justify-content: center; /* Center vertically */
+    justify-content: center;
 }
 
 /* Frame for register page to perform left and right*/
