--- a/app/templates/login_page.html
+++ b/app/templates/login_page.html
@@ -27,24 +27,25 @@
         
         <div class="form-container">
             <div class="input-container">
-                <label class="text-position">Email Address</label>
-                <input type="email" name="textbox" value="{{ login_text }}"><br><br>
+                <label>Email Address</label>
+                <input type="email" name="textbox" value="{{ login_text }}">
             </div>
-
+        
             <div class="password-container">
-                <label class="text-position">Password</label>
+                <label>Password</label>
                 <input type="password" name="password" value="{{ password_text }}">
                 <button type="button" class="toggle-password-btn">
                     <i class="fas fa-eye"></i>
                 </button>
             </div>
             
-            {% if error_message and request.method == 'POST' %}
-            <div class="alert">
-                <strong>Error:</strong> {{ error_message }}
+            <div>
+                {% if error_message and request.method == 'POST' %}
+                <div class="alert">
+                    <strong>Error:</strong> {{ error_message }}
+                </div>
+                {% endif %}
             </div>
-            {% endif %}
-            
             
                 
             <!-- Include your JavaScript -->
