--- a/app/static/css/main_page.css
+++ b/app/static/css/main_page.css
@@ -1,13 +1,3 @@
-/* Heading pictures on top left page*/
-.heading {
-    background-image: url("../pic/INTI_LOGO.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 90px;
-    width: 100%;
-}
-
-/* Body handles background and centering */
 body {
     margin: 0;
     padding: 0;
@@ -15,98 +5,75 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #f5f5f5;
 }
 
-/* Frame form */
+.heading {
+    background: url("../pic/INTI_LOGO.png") center no-repeat;
+    height: 90px;
+    width: 100%;
+}
+
 form {
     text-align: center;
-    justify-content: center;
-    display: center;
-    width: 55vh;
-    padding: 50px;
+    width: 400px;
+    padding: 40px;
     border: 2px solid #ccc;
     border-radius: 10px;
-    background-color: #fff;
+    background: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
-/* Frame for register page*/
 .form-container {
     display: flex;
-    justify-content: center;
-}
-
-/* Frame for register page to perform left and right*/
-.form-left, .form-right {
-    display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
 }
 
 .input-container, .password-container {
+    width: 100%;
+    position: relative;
     display: flex;
     flex-direction: column;
-    align-items: flex-start; /* Align label and input */
-    position: relative;
 }
 
-/* Input section*/
-input,
-select {
-    width: 25vh;
-    padding: 10px;
-    margin: 1% 0;
-    box-sizing: border-box;  /* Ensure padding and border are included in the total width */
-    display: inline-block;  /* Align with the other form elements */
-}
-
-/* Button format*/
-button {
-    width: 25vh;
-    padding: 8px 16px;
-    margin-top: 25px;
-}
-
-/* For every click button frame*/
-.button-frame {
-    text-align: center;
-    margin-top: 30px;
-    padding: 10px;
-}
-
-/* To remove bold*/
-.span {
-    font-weight: normal;
-}   
-
-/* Show those text position*/
-.text-position {
-    display: block;
+label {
     text-align: left;
     margin-bottom: 5px;
 }
 
-/* Alert frame*/
+input {
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+button {
+    width: 100%;
+    padding: 10px;
+    margin-top: 20px;
+}
+
+.button-frame {
+    margin-top: 30px;
+}
+
 .alert {
     color: white;
-    background-color: red;
+    background: red;
     padding: 10px;
     border-radius: 5px;
     margin-top: 15px;
 }
 
-
-
 .toggle-password-btn {
     position: absolute;
-    right: 5px;
-    top: 30%;
-    transform: translateY(-50%);
-    border: none;
+    right: 10px;
+    top: 32px;
     background: none;
+    border: none;
     cursor: pointer;
-    font-size: 14px;
-    width: 20px;
-    height: 20px;
-    padding: 0;
     color: #555;
 }
