--- a/app/static/css/main_page.css
+++ b/app/static/css/main_page.css
@@ -22,6 +22,9 @@ form {
     border-radius: 10px;
     background: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+
+    justify-content: center;
+    display: center;
 }
 
 .form-container {
