--- a/app/static/css/main_page.css
+++ b/app/static/css/main_page.css
@@ -35,7 +35,9 @@ form {
 
 .input-container, .password-container {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: flex-start; /* Align label and input */
+    position: relative;
 }
 
 label {
