--- a/app/static/css/main_page.css
+++ b/app/static/css/main_page.css
@@ -78,10 +78,15 @@ button {
 
 .toggle-password-btn {
     position: absolute;
-    right: 10px;
-    top: 32px;
-    background: none;
+    right: 5px;
+    top: 30%;
+    transform: translateY(-50%);
     border: none;
+    background: none;
     cursor: pointer;
+    font-size: 14px;
+    width: 20px;
+    height: 20px;
+    padding: 0;
     color: #555;
 }
