--- a/app/static/css/main_page.css
+++ b/app/static/css/main_page.css
@@ -33,6 +33,11 @@ form {
     align-items: center;
 }
 
+.form-left, .form-right {
+    display: flex;
+    flex-direction: column;
+}
+
 .input-container, .password-container {
     display: flex;
     flex-direction: column;
@@ -60,7 +65,7 @@ button {
 
 .button-frame {
     text-align: center;
-    margin-top: 30px;
+    margin-top: 20px;
     padding: 10px;
 }
 
