--- a/app/static/css/main_page.css
+++ b/app/static/css/main_page.css
@@ -22,7 +22,6 @@ form {
     border-radius: 10px;
     background: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-
     justify-content: center;
     display: center;
 }
@@ -31,6 +30,7 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .form-left, .form-right {
