--- a/app/templates/register_page.html
+++ b/app/templates/register_page.html
@@ -15,7 +15,7 @@
         <br>
         <h1>Register as New User</h1>
         <br>
-        <div class="form-container" style="flex-direction: row; justify-content: space-between;">
+        <div style="flex-direction: row; justify-content: space-between;">
             <div class="form-left">
                 <label class="text-position">Full Name as IC</label>
                 <input type="text" name="username" value="{{ username_text }}"><br>
