--- a/app/static/css/main_page.css
+++ b/app/static/css/main_page.css
@@ -29,6 +29,7 @@ form {
 .form-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .form-left, .form-right {
