--- a/app/templates/register_page.html
+++ b/app/templates/register_page.html
@@ -17,7 +17,7 @@
         <br>
         <div style="display: flex; flex-direction: row; justify-content: space-between;">
             <div class="form-left">
-                <label class="text-position">Full Name as IC</label>
+                <label class="text-position">Full Name as per IC</label>
                 <input type="text" name="username" value="{{ username_text }}"><br>
                 
                 <label class="text-position">Staff ID</label>
