--- a/app/templates/login_page.html
+++ b/app/templates/login_page.html
@@ -57,7 +57,7 @@
                 <br><br>
                 <a href="{{ url_for('register_page') }}">Register</a>
                 <br><br>
-                <a href="{{ url_for('forgot_password_page') }}">Forgot Password</a>
+                <a href="{{ url_for('forgot_password_page') }}">Forgot Password?</a>
             </div>
         </div>
         
