--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -6,15 +6,17 @@
 </head>
 
 <body>
-    {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-    {% for category, message in messages %}
-        <div class="alert alert-{{ category }}">
-        {{ message }}
-        </div>
-    {% endfor %}
-    {% endif %}
-    {% endwith %}
+    <form method="POST">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        {% for category, message in messages %}
+            <div class="alert alert-{{ category }}">
+            {{ message }}
+            </div>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
+    </form>
 </body>
 
 </html>
