--- a/app/templates/resetPassword_page.html
+++ b/app/templates/resetPassword_page.html
@@ -26,7 +26,7 @@
                 <button type="button" class="toggle-password-btn">
                     <i class="fas fa-eye"></i>
                 </button>
-            </div><br><br>
+            </div><br>
 
             <div class="password-container">
                 <label class="text-position"> Confirm Password</label>
