--- a/app/templates/forgotPassword_page.html
+++ b/app/templates/forgotPassword_page.html
@@ -4,7 +4,7 @@
     <title>ForgotPassword_page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main_page.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login_part.css') }}">
 </head>
 
 <body>
