--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Home_Page</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main_page.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login_part.css') }}">
 </head>
 
 <body>
