--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Home_Page</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/login_part.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/home_part.css') }}">
 </head>
 
 <body>
@@ -16,6 +16,9 @@
                 {% endfor %}
             {% endif %}
         {% endwith %}
+
+        
+
         </form>
 </body>
 
