--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -17,6 +17,11 @@
             {% endif %}
         {% endwith %}
 
+
+        <div class="heading"></div>
+        <br>
+        <h1>WELCOME BACK {user_id}</h1><br>
+
         
 
         </form>
