--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -20,7 +20,7 @@
 
         <div class="heading"></div>
         <br>
-        <h1>WELCOME BACK {user_id}</h1><br>
+        <h1>WELCOME BACK {{user_id}}</h1><br>
 
         
 
