--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -10,6 +10,7 @@ body {
 
 .heading {
     background: url("../pic/INTI_LOGO.png") center no-repeat;
+    margin-left: 70px;
     height: 90px;
     width: 100%;
 }
