--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -18,9 +18,11 @@
         {% endwith %}
 
 
-        <div class="heading"></div>
+        <div class="heading" >
+            <h1>WELCOME BACK {{user_name}}</h1><br>
+        </div>
         <br>
-        <h1>WELCOME BACK {{user_id}}</h1><br>
+        
 
         
 
