--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -18,16 +18,13 @@
         {% endwith %}
 
 
-        <div class="heading">
-            {% if user_name %}
-                <h1>WELCOME BACK, {{ user_name }} {{user_id}}!</h1>
-            {% else %}
-                <h1>WELCOME, GUEST!</h1>
-                <p>Please <a href="/login">log in</a> to access your account</p>
-            {% endif %}
+        <div class="heading" >
+            <h1>WELCOME BACK {{user_id}}</h1><br>
         </div>
+        <br>
+        
 
-            
+        
 
         </form>
 </body>
