--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -19,7 +19,7 @@
 
 
         <div class="heading" >
-            <h1>WELCOME BACK {{user_id}}</h1><br>
+            <h1>WELCOME BACK {{message}}</h1><br>
         </div>
         <br>
         
