--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -17,13 +17,11 @@
             {% endif %}
         {% endwith %}
 
-
-        <div class="heading" >
-            <h1>WELCOME BACK {{user_name}}</h1><br>
+        <div class="flex-container">
+            <div class="heading"></div>
+            <h1>WELCOME BACK {{user_name}}</h1>
+            <button>Logout</button>
         </div>
-        <br>
-        
-
         
 
         </form>
