--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -19,10 +19,9 @@
 
         <div class="flex-container">
             <div class="heading"></div>
-            <h1>WELCOME BACK {{user_name}}</h1>
-            <button>Logout</button>
+            <h1 style="text-align: center; flex-grow: 1;">WELCOME BACK {{user_name}}</h1>
+            <button style="margin-left: auto;">Logout</button>
         </div>
-        
 
         </form>
 </body>
