--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -17,7 +17,7 @@
             {% endif %}
         {% endwith %}
 
-        <div class="flex-container" style="display: flex; align-items: center;">
+        <div class="flex-container">
             <div class="heading"></div>
             <h1 style="text-align: center; flex: 1; margin: 0;">WELCOME BACK {{user_name}}</h1>
             <button style="margin-left: auto;">Logout</button>
