--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -19,8 +19,8 @@
 
         <div class="flex-container">
             <div class="heading"></div>
-            <h1 style="text-align: center; flex: 1; margin: 0;">WELCOME BACK {{user_name}}</h1>
-            <button style="margin-left: auto;">Logout</button>
+            <h1 style="text-align: center; flex: 1; margin: 0;"> WELCOME BACK <br> {{user_name}} </h1>
+            <button type="button">Logout</button>
         </div>
 
         </form>
