--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -19,7 +19,7 @@
 
         <div class="flex-container">
             <div class="heading"></div>
-            <h1 style="text-align: center; flex: 1; margin: 0;"> WELCOME BACK <br> {{user_name}} </h1>
+            <h2 style="text-align: center; flex: 1; margin: 0;"> Welcome Back <br> {{user_name}} </h2>
             <button type="button">Logout</button>
         </div>
 
