--- a/app/templates/register_page.html
+++ b/app/templates/register_page.html
@@ -29,15 +29,14 @@
                 <label class="text-position">Department</label>
                 <select name="department" value="{{ department_text }}">
                     <option value="" disabled selected>Select Department</option>
-                    <option value="SOC">SCHOOL OF COMPUTING(SOC)</option>
-                    <option value="SOE">SCHOOL OF ENGINEERING(SOE)</option>
-                    <option value="CEPS">CEPS</option>
-                    <option value="CADP">CADP</option>
-                    <option value="SOBIZ">SOBIZ</option>
-                    <option value="MPU">MPU</option>
-                    <option value="CAE">CAE</option>
-                    <option value="RD">RD</option>
-                    <option value="SOHOS">SOHOS</option>
+                    <option value="CADP">(CADP) Centre of Australian Degree Program</option>
+                    <option value="CAE">(CAE) Centre of American Student</option>
+                    <option value="CEPS">(CEPS) Centre of Excellent for Pre-University Studies</option>
+                    <option value="LCMPU">(LCMPU) Language Centre</option>
+                    <option value="SOBIZ">(SOBIZ) chool of Business</option>
+                    <option value="SOC">(SOC) School of Computing</option>
+                    <option value="SOE">(SOE) School of Engineering</option>
+                    <option value="SOHOS">(SOHOS) School of Hospitality and Culinary Arts</option>
                 </select>
             </div>
     
