--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -19,8 +19,15 @@
 
         <div class="flex-container">
             <div class="heading"></div>
-            <h2 style="text-align: center; flex: 1; margin: 0;"> Welcome Back <br> {{user_name}} </h2>
-            <button type="button">Logout</button>
+            
+            <div>
+                <h4 class="span">
+                    {{user_name}} <br>
+                    {{user_id}} <br>
+                    {{department_text}}
+                </h4>
+                 <button type="button">Logout</button>
+            </div>
         </div>
 
         </form>
