--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -20,11 +20,11 @@
         <div class="flex-container">
             <div class="heading"></div>
             
-            <div>
+            <div class="menu_display_name">
                 <h4 class="span">
                     {{user_name}} <br>
                     {{user_id}} <br>
-                    {{department_text}}
+                    {{user_department}}
                 </h4>
                  <button type="button">Logout</button>
             </div>
