--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -16,7 +16,7 @@
                     {{user_id}} <br>
                     {{user_department}}
                 </h4>
-                 <button type="button">Logout</button>
+                 <button class="button-logout" type="button">Logout</button>
             </div>
         </div>
 
