--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -11,11 +11,14 @@
             <div class="heading"></div>
             
             <div class="menu_display_name">
-                <h4 class="span">
-                    {{user_name}} <br>
-                    {{user_id}} <br>
-                    {{user_department}}
-                </h4>
+                <div class="display_name ">
+                    <h4 class="span">
+                        {{user_name}} <br>
+                        {{user_id}} <br>
+                        {{user_department}}
+                    </h4>
+                </div>
+                
                  <button class="button-logout" type="button">Logout</button>
             </div>
         </div>
